--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ h1
 {
     font-size: 50px;
 }
+h2{
+    font-size: 30px;
+}
 .orange-color{
     color:orange;
 }
@@ -16,6 +19,7 @@ h1
 {
     width: 50%;
     padding-left: 2%;
+    
 }
 .half-width img
 {
@@ -33,4 +37,13 @@ h1
 .top-banner
 {
    background-image: url();
+}
+.experiance-item
+{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20%;
+    border-radius: 5px;
+    box-shadow : 10px 10px 40px deeppink;
 }
