--- a/style.css
+++ b/style.css
@@ -45,5 +45,6 @@ h2{
     margin-right: 5%;
     padding-left: 20%;
     border-radius: 5px;
-    box-shadow : 10px 10px 40px deeppink;
+    box-shadow : 10px 10px 40px rgb(130, 20, 255);
+    border-left: 7px solid blue;
 }
